Fix desktop menu links not showing

--- a/assets/css/components/_nav.scss
+++ b/assets/css/components/_nav.scss
@@ -183,8 +183,8 @@
     }
 
     .nav__links-container {
-        height: auto;
         float: right;
+        display: block;
     }
 
     .nav__links {
